Changelog
=========

5.3-dev - (unreleased)
----------------------
* WIP: added a selection widget for a daviz visualization chart in related
  item  [tiberich #9571]
* Bug fix: always return a string from customized Titles
  [tiberich #5630]
* Bug fix: adapt rdfmarshaller code to api changes in eea.rdfmarshaller
  [tiberich #3981]
* Code cleanup in several modules to clean pyflakes warnings
  [tiberich]

5.2 - (2012-09-27)
------------------
* Change: Update references to eea.depiction (formerly valentine.imagescales)
  [voineali refs #5497]

5.1 - (2012-08-27)
------------------
* Change: made description and data path optional field for external data spec.
  [demarant fixes #5478]
* Bug fix: when creating a new assessment, properly copy the related items
  [tiberich refs #5462]

5.0 - (2012-07-13)
------------------
* Feature: Show old provider name for legacy reasons on old external data spec
  which misses a real Organisation.
  [demarant fixes #5232]
* Bug Fix: Fixed i18n missing tags, i18n:domain and duplicate key in .zpt
  [prospchr refs #5162]
* Bug fix: added max file size validator for FactSheetDocument
  [tiberich #5259]

4.24 - (2012-06-12)
-------------------
* Bug fix: take figure readiness into consideration for
  Assessment ready for publishing
  [tiberich #5256]
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* Bug fix: set isURL validator for RationaleReference links
  [tiberich #5212]

4.23 - (2012-04-26)
-------------------
* Change: Use eea.dataservice organisation widgets instead of custom
  macro, helper_js
  [voineali refs #5072]
* Change: Layout improvements
  [demarant]
* Bug fix: Show data source info same way for assessments as for specific
  assessments. Create browser view template for figures.
  [demarant fixes #5066]
* Bug fix: Display sources as list, since there can be multiple ones now with
  related items (r27544). added missing description on external data spec.
  [demarant refs #5066]